--- a/things/templates/home.html
+++ b/things/templates/home.html
@@ -11,8 +11,9 @@
   <form action="{% url 'home' %}" method="get">
     {% csrf_token %}
     {{form}}
+    <input type="submit">
   </form>
-
+  
   
 </body>
 </html>
